--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -2,6 +2,9 @@
     "manifest_version": 3,
     "version": "1.0",
     "name": "Pocket",
+    "permission": [
+        "tabs"
+    ],
     "action": {
         "default_popup": "index.html",
         "default_icon" : "icon.png"
