--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "version": "1.0",
     "name": "Pocket",
-    "permission": [
+    "permissions": [
         "tabs"
     ],
     "action": {
