--- a/MetricConversion/manifest.json
+++ b/MetricConversion/manifest.json
@@ -1,5 +1,5 @@
 {
-    "manifest": "3",
+    "manifest_version": 3,
     "name": "Metric Conversion",
     "version": "1.0",
     "description": "Convert imperial units to metric units on web pages.",
